# NJU-2025-racecar

./: README.md
racecar_ws/: report.md
racecar_ws/devel/: .catkin  local_setup.fish
racecar_ws/devel/include/ackermann_msgs/: AckermannDrive.h  AckermannDriveStamped.h
racecar_ws/devel/include/vesc_msgs/: VescState.h  VescStateStamped.h
racecar_ws/devel/lib/joy/: joy_node
racecar_ws/devel/lib/pkgconfig/: ackermann_cmd_mux.pc  ackermann_msgs.pc  joy.pc  racecar.pc  racecar_control.pc  racecar_description.pc  racecar_gazebo.pc  serial.pc  vesc_ackermann.pc  vesc_driver.pc  vesc_msgs.pc  waypoint_logger.pc
racecar_ws/devel/lib/racecar_gazebo/: findLine
racecar_ws/devel/lib/serial/: serial_example
racecar_ws/devel/lib/vesc_ackermann/: ackermann_to_vesc_node  vesc_to_odom_node
racecar_ws/devel/lib/vesc_driver/: vesc_driver_node
racecar_ws/devel/share/ackermann_cmd_mux/cmake/: ackermann_cmd_muxConfig.cmake
racecar_ws/devel/share/ackermann_msgs/cmake/: ackermann_msgs-msg-extras.cmake  ackermann_msgs-msg-paths.cmake  ackermann_msgsConfig.cmake
racecar_ws/devel/share/joy/cmake/: joyConfig.cmake
racecar_ws/devel/share/racecar/cmake/: racecarConfig.cmake
racecar_ws/devel/share/racecar_control/cmake/: racecar_controlConfig.cmake
racecar_ws/devel/share/racecar_description/cmake/: racecar_descriptionConfig.cmake
racecar_ws/devel/share/racecar_gazebo/cmake/: racecar_gazeboConfig.cmake
racecar_ws/devel/share/roseus/ros/ackermann_msgs/: manifest.l
racecar_ws/devel/share/roseus/ros/vesc_msgs/: manifest.l
racecar_ws/devel/share/serial/cmake/: serialConfig.cmake
racecar_ws/devel/share/vesc_ackermann/cmake/: vesc_ackermannConfig.cmake
racecar_ws/devel/share/vesc_driver/cmake/: vesc_driverConfig.cmake
racecar_ws/devel/share/vesc_msgs/cmake/: vesc_msgs-msg-paths.cmake  vesc_msgsConfig.cmake
racecar_ws/devel/share/waypoint_logger/cmake/: waypoint_loggerConfig.cmake
racecar_ws/src/: README.md
racecar_ws/src/racecar_control/: CMakeLists.txt  package.xml
racecar_ws/src/racecar_control/scripts/: keyboard_teleop.py
racecar_ws/src/racecar_description/: CMakeLists.txt  package.xml
racecar_ws/src/racecar_gazebo/: CMakeLists.txt  package.xml
racecar_ws/src/racecar_gazebo/launch/: racecar_navigation_base.launch  racecar_runway_navigation.launch
racecar_ws/src/racecar_gazebo/scripts/: findLine.py  global_hybrid_A_star.py  keyboard_teleop.py  light_contrl.py  path_pursuit.py
racecar_ws/src/system/hokuyo_node/: CMakeLists.txt  package.xml
racecar_ws/src/system/joystick_drivers/joy/: CMakeLists.txt
racecar_ws/src/system/joystick_drivers/joystick_drivers/: CMakeLists.txt
racecar_ws/src/system/racecar/ackermann_cmd_mux/: CMakeLists.txt  package.xml
racecar_ws/src/system/racecar/racecar/: CMakeLists.txt  package.xml
racecar_ws/src/system/racecar/racecar/scripts/: joy_teleop.py
racecar_ws/src/system/serial/: CMakeLists.txt
racecar_ws/src/system/vesc/vesc/: package.xml
racecar_ws/src/system/vesc/vesc_driver/: CMakeLists.txt
racecar_ws/src/system/waypoint_logger/: CMakeLists.txt
racecar_ws/src/system/waypoint_logger/scripts/: waypoint_logger.py
