<?xml version="1.0"?>
<package format="2">
  <name>racecar_control</name>
  <version>0.0.0</version>
  <description>The racecar_control package</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>ackermann_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>