<?xml version="1.0"?>
<package format="2">
  <name>racecar_gazebo</name>
  <version>0.0.0</version>
  <description>The racecar_gazebo package</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>gazebo_ros</depend>
  <depend>controller_manager</depend>
  <depend>ros_controllers</depend>
  <depend>ros_control</depend>
  <depend>gazebo_ros_control</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>trajectory_msgs</depend>
  <depend>rospy</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>ackermann_msgs</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>
