<?xml version="1.0"?>
<package format="2">
  <name>racecar</name>
  <version>0.0.1</version>
  <description>RACECAR launch scripts</description>

  <author>Michael Boulet</author>
  <maintainer email="boulet@ll.mit.edu">Michael Boulet</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/pwm_sysfs_driver</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <!--<build_depend></build_depend>-->

  <exec_depend>razor_imu_9dof</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>rviz</exec_depend>

  <!-- specific to racecar-v1 -->
  <!-- <exec_depend>pointgrey_camera_driver</exec_depend> -->
  <!-- <exec_depend>px4flow</exec_depend> -->
  <!-- <exec_depend>pwm_sysfs_driver</exec_depend> -->

  <!-- specific to racecar-v2 -->

  <!-- mapping -->
  <exec_depend>gmapping</exec_depend>
  <exec_depend>hector_mapping</exec_depend>
  <exec_depend>robot_pose_ekf</exec_depend>

  <export>
  </export>
</package>
