<?xml version="1.0"?>
<package format="2">
  <name>vesc</name>
  <version>0.0.1</version>
  <description>
    Metapackage for ROS interface to the Vedder VESC open source motor controller.
  </description>

  <maintainer email="boulet@ll.mit.edu">Michael T. Boulet</maintainer>
  <author email="boulet@ll.mit.edu">Michael T. Boulet</author>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/vesc</url>
  <url type="repository">https://github.mit.edu/racecar/vesc</url>
  <url type="bugtracker">https://github.mit.edu/racecar/vesc/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>vesc_driver</exec_depend>
  <exec_depend>vesc_msgs</exec_depend>
  <exec_depend>vesc_ackermann</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
